@@ -10,8 +10,8 @@ Version 2.17
 * The following bugs are resolved with this release:
 
   6778, 6808, 9685, 11607, 13717, 13939, 14042, 14090, 14166, 14150, 14151,
-  14154, 14157, 14166, 14173, 14195, 14283, 14298, 14303, 14307, 14328, 14331,
-  14336, 14337, 14347, 14349
+  14154, 14157, 14166, 14173, 14195, 14252, 14283, 14298, 14303, 14307,
+  14328, 14331, 14336, 14337, 14347, 14349
 
 * Support for STT_GNU_IFUNC symbols added for s390 and s390x.
   Optimized versions of memcpy, memset, and memcmp added for System z10 and
@@ -30,6 +30,9 @@ Version 2.17
 
 * The minimum Linux kernel version that this version of the GNU C Library
   can be used with is 2.6.16.
+
+* Optimizations of string functions memchr, wcschr, wcscpy, and wcsrchr for
+  powerpc POWER7.  Implemented by Will Schmidt.
 
 
 Version 2.16
